<resources>
    <string name="app_name">W23LifeCycle</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="formInfo">Please fill in this form information:</string>
    <string name="title_activity_third">ThirdActivity</string>

    <!-- Strings related to form -->
    <string name="areaKnowledge">Areas of knowledge:</string>
    <string name="name">Your entire name:</string>
    <string name="workTitle">Work title:</string>
    <string name="gdprInfo">I hereby allow this data to be stored according to GDPR</string>
    <string name="gdprAcceptance">Form cannot be submitted without GDPR acceptance</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>

    <!-- Strings related to third activity -->
    <string name="dataStored">Current information stored:</string>
    <string name="gender">Gender:</string>
    <string name="justName">Name:</string>

    <!-- Strings related to menu  -->
    <string name="logout">Logout</string>
    <string name="form">Form</string>
    <string name="dataView">Data View</string>
    <string name="clearPref">Clear Data</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>