<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/editTextTextPersonKnowledge"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/areaKnowledge"
        android:inputType="textLongMessage|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonWorkTitle"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonWorkTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <EditText
        android:id="@+id/editTextTextPersonWorkTitle"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/workTitle"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="61dp"
        android:background="#03A9F4"
        android:padding="5dp"
        android:text="@string/formInfo"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="60dp"

        android:background="@drawable/form_button"
        android:onClick="onClick"

        android:text="Submit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonKnowledge"
        app:layout_constraintVertical_bias="0.736" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="250dp"
        android:layout_height="142dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565">


        <RadioButton
            android:id="@+id/isMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/isFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/isOtherGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </RadioGroup>

    <Switch
        android:id="@+id/gdprSwitch"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="192dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:text="@string/gdprInfo"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/gdprSwitch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

</androidx.constraintlayout.widget.ConstraintLayout>