<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".ThirdActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="259dp"
        android:layout_height="32dp"
        android:padding="3dp"
        android:text="@string/dataStored"
        android:textColor="#E91E63"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="412dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/justName"
            android:textColor="#E91E63" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/workTitle"
            android:textColor="#E91E63" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/areaKnowledge"
            android:textColor="#E91E63" />

        <TextView
            android:id="@+id/textKnowledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/gender"
            android:textColor="#E91E63" />

        <TextView
            android:id="@+id/textGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>